[gd_scene load_steps=18 format=2]

[ext_resource path="res://Enemies/spiderboss.png" type="Texture" id=1]
[ext_resource path="res://UnderGroundWorld/cavefloor.png" type="Texture" id=2]
[ext_resource path="res://Player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://UnderGroundWorld/spiderbossbackground.png" type="Texture" id=4]
[ext_resource path="res://UnderGroundWorld/HugeRock.png" type="Texture" id=5]
[ext_resource path="res://UnderGroundWorld/SpiderBossP2.gd" type="Script" id=6]
[ext_resource path="res://UnderGroundWorld/CrushedSpiderboss.png" type="Texture" id=7]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=2]
0/name = "cavefloor.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 382, 136 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "SpiderJumping"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 260, 137 ), Vector2( 260, 120 ), Vector2( 260, 110 ), Vector2( 260, 100 ), Vector2( 260, 110 ), Vector2( 260, 120 ), Vector2( 260, 130 ), Vector2( 260, 137 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.6, 0.6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "SpiderWalking"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 380, 136 ), Vector2( 360, 137 ), Vector2( 340, 137 ), Vector2( 320, 137 ), Vector2( 300, 137 ), Vector2( 280, 137 ), Vector2( 260, 137 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.2, 0.2 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 107.5, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 87.5 )

[sub_resource type="CircleShape2D" id=8]
radius = 63.0

[sub_resource type="Animation" id=9]
resource_name = "FallingRock"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 259, -47 ), Vector2( 259, -20 ), Vector2( 259, 0 ), Vector2( 259, 30 ), Vector2( 259, 60 ), Vector2( 259, 90 ), Vector2( 259, 120 ), Vector2( 259, 130 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 259, -47 ) ]
}

[node name="SpiderNode2D" type="Node2D"]
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 35, 176 )
z_index = 1

[node name="BottomRight" parent="Player/Camera2D/Limits" index="1"]
position = Vector2( 320, 192 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 66
collision_mask = 65
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, 262143, 0, 0, 327679, 0, 0, 393215, 0, 0, 458751, 0, 0, 524287, 0, 0, 589823, 0, 0, 655359, 0, 0, 720895, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0 )

[node name="Spiderboss" type="Sprite" parent="."]
position = Vector2( 382, 136 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Spiderboss"]
anims/RESET = SubResource( 4 )
anims/SpiderJumping = SubResource( 7 )
anims/SpiderWalking = SubResource( 5 )

[node name="RockCatcher" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="RockCatcher"]
position = Vector2( 107, 185 )
shape = SubResource( 3 )

[node name="SpiderWall" type="StaticBody2D" parent="."]

[node name="Wall" type="CollisionShape2D" parent="SpiderWall"]
position = Vector2( 191, 87 )
shape = SubResource( 6 )

[node name="CrushedSpiderboss" type="Sprite" parent="."]
visible = false
position = Vector2( 261, 100 )
texture = ExtResource( 7 )

[node name="HugeRock" type="Sprite" parent="."]
position = Vector2( 259, -47 )
texture = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="HugeRock"]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="HugeRock/StaticBody2D"]
position = Vector2( 2, -17 )
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HugeRock"]
anims/FallingRock = SubResource( 9 )
anims/RESET = SubResource( 10 )

[editable path="Player"]
[editable path="Player/Hurtbox"]
